- fix: focus on the watch title when using keyboard shortcuts - fix: change the count message (when a countdown ends) to a span element, this way it will be aligned when the title changes its height

--- a/style.css
+++ b/style.css
@@ -127,6 +127,11 @@
     padding: 0 15px;
     }
 
+.CountUp-countMessage, .CountDown-countMessage
+    {
+    margin-left: 150px;
+    }
+
 
 .CountUp-remove, .CountDown-remove
     {
